--- a/css/scss/_style.scss
+++ b/css/scss/_style.scss
@@ -1,3 +1,5 @@
+$fontSize:16;
+
 $black: #181818;
 $orange: #ee961b;
 
@@ -6,5 +8,6 @@ body{
 	font-family: $font-avenir;
 	font-weight: 400;
 	color: $black;
+	font-size: $fontSize + px;
 }
 
