--- a/css/scss/_effects.scss
+++ b/css/scss/_effects.scss
@@ -1,3 +1,4 @@
+/*эффект клика на кнопку*/
 .ripple {
     position: relative;
     overflow: hidden;
@@ -26,8 +27,9 @@
     opacity: .2;
     transition: 0s
 }
+/*эффект клика на кнопку END*/
 
-
+/* эффект иконок при наведении */
 @keyframes top_bottom {
 	0%, 50%, 100% {
 		top: -2px;
@@ -45,3 +47,4 @@
 		top: 2px;
 	}
 }
+/* эффект иконок при наведении END*/
