--- a/css/scss/_responsive.scss
+++ b/css/scss/_responsive.scss
@@ -227,7 +227,7 @@ STYLE LG,MD
 	}
 	
 	.t-header{
-		margin-top: 13px;
+		margin-top: (13/$fontSize) + rem;
 		.meal-menu{
 			float: left;
 			padding: 22px 0px;
@@ -396,6 +396,11 @@ STYLE LG,MD
 		margin: 0 auto;
 		max-width: (1920/$fontSize) + rem;
 		padding: 0px (40/$fontSize) + rem;
+		padding-bottom: (50/$fontSize) + rem;
+		margin-top: - (35/$fontSize) + rem;
+		position: relative;
+		border-bottom: 1px solid #f1f1f1;
+		z-index: 10;
 		.promo-row{
 			margin-left: -(25/$fontSize) + rem;
 			margin-right: -(25/$fontSize) + rem;
@@ -405,8 +410,70 @@ STYLE LG,MD
 				padding-left: (25/$fontSize) + rem;
 				padding-right: (25/$fontSize) + rem;
 				.promo-box-out{
-					height: 200px;
-					background: $red;
+					cursor: pointer;
+					@include transform-rotate(2deg);
+					&.red{
+						background: $red;
+					}
+					&.tirq{
+						background: $tirq;
+					}
+					&.ohra{
+						background: $ohra;
+					}
+					.promo-box-in{
+						@include transform-rotate(-2deg);
+						position: relative;
+						.promo-img{
+							position: absolute;
+							bottom: 0; 
+							left: 1em;
+							max-height: (200/$fontSize) + rem;
+							max-width: (200/$fontSize) + rem;
+							img{
+								display: block;
+								margin: 0 auto;
+								max-width: 100%;
+							}
+						}
+						.promo-title{
+							position: absolute;
+							color: $white;
+							font-family: $font-Poster;
+							font-size: (38/$fontSize) + rem;
+						}
+					}
+				}
+			}
+		}
+	}
+	
+	.category-out{
+		max-width: (1920/$fontSize) + rem;
+		margin: 0 auto;
+		padding: 0 (40/$fontSize) + rem;
+		padding-top: (50/$fontSize) + rem;
+		.category-left{
+			float: left;
+			width: 20%;
+			.category-title{
+				color: $black;
+				font-size: 36px;
+				font-family: $font-Poster;
+			}
+		}
+		.cat-product{
+			float: left;
+			width: 80%;
+			padding-left: (10/$fontSize) + rem;
+			padding-right: (10/$fontSize) + rem;
+			.cat-product-row{
+				margin-left: (10/$fontSize) + rem;
+				margin-right: (10/$fontSize) + rem;
+				.cat-product-one{
+					float: left;
+					padding-left: (10/$fontSize) + rem;
+					padding-right: (10/$fontSize) + rem;
 				}
 			}
 		}
