--- a/css/scss/_styleLG.scss
+++ b/css/scss/_styleLG.scss
@@ -1,5 +1,6 @@
-@media (min-width: $lg-width-media) {
-	body{
-		font-size: 20px;
+@media (min-width: $lg-width-media - 1px) {
+	
+	.cat-product-one{
+		width: 25%;
 	}
 }
