--- a/css/scss/all.scss
+++ b/css/scss/all.scss
@@ -1,3 +1,5 @@
+/*!To change CSS file, change SCSS file which is in scss/all.scss*/
+/*!Чтобы изменить CSS файл, нужно изменить SCSS файл, который находится в scss/all.scss*/
 @import "_reset";
 @import "_grid";
 @import "_mixins";
